--- a/course-info-cli/pom.xml
+++ b/course-info-cli/pom.xml
@@ -49,5 +49,11 @@
         <version>5.10.1</version>
         <scope>test</scope>
     </dependency>
-</dependencies>
+        <dependency>
+            <groupId>com.pluralsight</groupId>
+            <artifactId>course-info-repository</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
